@@ -3,7 +3,7 @@
 
 <modification xmlns="http://www.simplemachines.org/xml/modification">
 	<id>el:prettyurls</id>
-	<version>0.9</version>
+	<version>0.9.3</version>
 
 	<file name="$sourcedir/Display.php">
 		<operation>
@@ -189,10 +189,7 @@ function cleanRequest()
 		{
 			$board = (int) $_REQUEST['board'];
 			if (!isset($_REQUEST['pretty']))
-			{
 				$context['pretty']['oldschoolquery'] = true;
-				unset($_GET['pretty']);
-			}
 		} else {
 			$_REQUEST['board'] = str_replace(array('&#039;', '\\'), array("\x12", ''), $_REQUEST['board']);
 			$pretty_board_lookup = unserialize($modSettings['pretty_board_lookup']);
@@ -200,7 +197,6 @@ function cleanRequest()
 
 			//	Fix $_REQUEST for silly mods that don't check $board
 			$context['pretty']['query_string']['board'] = $_REQUEST['board'];
-			$_GET['board'] = $board;
 			$_REQUEST['board'] = $board;
 		}
 ]]></add>
@@ -216,10 +212,7 @@ function cleanRequest()
 		{
 			$topic = (int) $_REQUEST['topic'];
 			if (!isset($_REQUEST['pretty']))
-			{
 				$context['pretty']['oldschoolquery'] = true;
-				unset($_GET['pretty']);
-			}
 		} else {
 			$_REQUEST['topic'] = str_replace(array('&#039;', '\\'), array("\x12", ''), $_REQUEST['topic']);
 			//	Are we feeling lucky?
@@ -240,7 +233,6 @@ function cleanRequest()
 
 			//	Fix $_REQUEST for silly mods that don't check $topic
 			$context['pretty']['query_string']['topic'] = $_REQUEST['topic'];
-			$_GET['topic'] = $topic;
 			$_REQUEST['topic'] = $topic;
 
 			//	That query should be counted separately
